--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -82,11 +82,11 @@
                                             </Grid.ColumnDefinitions>
 
                                             <TextBlock Grid.Column="0"
-                                                   Margin="10,10"
-                                                   FontSize="20"
-                                                   FontWeight="Bold"
-                                                   Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
-                                                   Text="Оформление:"/>
+                                                       Margin="10,10"
+                                                       FontSize="20"
+                                                       FontWeight="Bold"
+                                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                                       Text="Оформление:"/>
 
                                             <Grid Grid.Column="1">
                                                 <Grid.RowDefinitions>
@@ -96,7 +96,6 @@
                                                     <RowDefinition Height="*"/>
                                                     <RowDefinition Height="*"/>
                                                     <RowDefinition Height="{Binding Path=LengthImage}"/>
-                                                    <RowDefinition Height="{Binding Path=LengthScale}"/>
                                                 </Grid.RowDefinitions>
 
                                                 <Grid Grid.Row="0"
@@ -271,6 +270,7 @@
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
                                                         <ColumnDefinition Width="auto"/>
+                                                        <ColumnDefinition Width="{Binding Path=LengthScale}"/>
                                                     </Grid.ColumnDefinitions>
 
                                                     <TextBlock Grid.Column="0"
@@ -281,38 +281,25 @@
                                                            Text="Бесшовное заполнение:"/>
 
                                                     <CheckBox Grid.Column="1"
-                                                          FontSize="15"
-                                                          IsChecked="{Binding Path=Seamless,UpdateSourceTrigger=PropertyChanged}"
-                                                          HorizontalContentAlignment="Center"/>
-                                                </Grid>
+                                                              FontSize="15"
+                                                              Margin="0,0,15,0"
+                                                              IsChecked="{Binding Path=Seamless,UpdateSourceTrigger=PropertyChanged}"
+                                                              HorizontalContentAlignment="Center"/>
 
-                                                <Grid Grid.Row="6"
-                                                      Margin="0,10">
-                                                    <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition Width="auto"/>
-                                                        <ColumnDefinition Width="auto"/>
-                                                    </Grid.ColumnDefinitions>
-
-                                                    <TextBlock Grid.Column="0"
-                                                           FontSize="15"
-                                                           Margin="0,0,15,0"
-                                                           VerticalAlignment="Center"
-                                                           HorizontalAlignment="Center"
-                                                           Text="Масштаб изображения:"/>
-
-                                                    <Slider Grid.Column="1" 
+                                                    <Slider Grid.Column="2" 
                                                             Width="100" 
                                                             Minimum="100" 
                                                             VerticalAlignment="Center"
                                                             Maximum="3000"
                                                             Value="{Binding Path=ImageScail}"/>
                                                 </Grid>
+                                                
                                             </Grid>
                                         </Grid>
                                     </Grid>
 
                                     <Grid Grid.Row="1"
-                                      Margin="0,10">
+                                          Margin="0,10">
                                         <Grid>
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="auto"/>
@@ -320,16 +307,16 @@
                                             </Grid.ColumnDefinitions>
 
                                             <TextBlock Grid.Column="0"
-                                                   Margin="10"
-                                                   FontSize="20"
-                                                       VerticalAlignment="Center"
-                                                   Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
-                                                   FontWeight="Bold"
-                                                   Text="Озвучивание:"/>
+                                                       Margin="10,5"
+                                                       FontSize="20"
+                                                       VerticalAlignment="Top"
+                                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                                       FontWeight="Bold"
+                                                       Text="Озвучивание:"/>
 
                                             <Grid Grid.Column="1">
                                                 <Grid.RowDefinitions>
-                                                    <RowDefinition Height="*"/>
+                                                    <RowDefinition Height="auto"/>
                                                     <RowDefinition Height="{Binding Path=LengthSay}"/>
                                                 </Grid.RowDefinitions>
 
@@ -341,11 +328,11 @@
                                                     </Grid.ColumnDefinitions>
 
                                                     <TextBlock Grid.Column="0"
-                                                           FontSize="15"
-                                                           Margin="0,0,15,0"
-                                                           VerticalAlignment="Center"
-                                                           HorizontalAlignment="Center"
-                                                           Text="Скорось озвучивания"/>
+                                                               FontSize="15"
+                                                               Margin="0,0,15,0"
+                                                               VerticalAlignment="Center"
+                                                               HorizontalAlignment="Center"
+                                                               Text="Скорось озвучивания"/>
 
                                                     <ComboBox Grid.Column="1"
                                                           FontSize="15"
@@ -355,7 +342,7 @@
                                                 </Grid>
 
                                                 <Grid Grid.Row="0"
-                                                  Margin="0,10">
+                                                      Margin="0,10">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
                                                         <ColumnDefinition Width="auto"/>
@@ -363,7 +350,7 @@
 
                                                     <TextBlock Grid.Column="0"
                                                            FontSize="15"
-                                                           Margin="0,2,15,0"
+                                                           Margin="0,0,15,0"
                                                            VerticalAlignment="Center"
                                                            HorizontalAlignment="Center"
                                                            Text="Озвучивать:"/>
@@ -392,11 +379,11 @@
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
                                 <TextBlock Grid.Row="0"
-                                       FontSize="25"
+                                           FontSize="25"
                                            Margin="10,0"
-                                       FontWeight="Bold"
-                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
-                                       Text="Администрирование"/>
+                                           FontWeight="Bold"
+                                           Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                           Text="Администрирование"/>
 
                                 <Grid Grid.Row="1">
                                     <Grid.RowDefinitions>
@@ -414,11 +401,11 @@
                                             </Grid.ColumnDefinitions>
 
                                             <TextBlock Grid.Column="0"
-                                                   Margin="10,5"
-                                                   FontSize="20"
-                                                   FontWeight="Bold"
-                                                   Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
-                                                   Text="Администратор:"/>
+                                                       Margin="10,5"
+                                                       FontSize="20"
+                                                       FontWeight="Bold"
+                                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                                       Text="Администратор:"/>
 
                                             <Grid Grid.Column="1">
                                                 <Grid.RowDefinitions>
@@ -504,11 +491,11 @@
                                             </Grid.ColumnDefinitions>
 
                                             <TextBlock Grid.Column="0"
-                                                   Margin="10"
-                                                   FontSize="20"
-                                                   FontWeight="Bold"
-                                                   Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
-                                                   Text="Данные:"/>
+                                                       Margin="10"
+                                                       FontSize="20"
+                                                       FontWeight="Bold"
+                                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                                       Text="Данные:"/>
 
                                             <Grid Grid.Column="1">
                                                 <Grid.RowDefinitions>
@@ -557,12 +544,11 @@
                                             </Grid.ColumnDefinitions>
 
                                             <TextBlock Grid.Column="0"
-                                                   Margin="10"
-                                                   FontSize="20"
-                                                       VerticalAlignment="Center"
-                                                   FontWeight="Bold"
-                                                   Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
-                                                   Text="Система:"/>
+                                                       Margin="10"
+                                                       FontSize="20"
+                                                       FontWeight="Bold"
+                                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                                       Text="Система:"/>
 
                                             <Grid Grid.Column="1">
                                                 <Grid.RowDefinitions>
