--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -244,6 +244,7 @@
 
                                                         <TextBox Grid.Column="0" 
                                                                  FontSize="15"
+                                                                 MaxWidth="250"
                                                                  Margin="0,0,5,0"
                                                                  Padding="10,0"
                                                                  IsReadOnly="True"
