--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -27,7 +27,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="50px"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="50px"/>
+                <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0">
@@ -593,7 +593,7 @@
 
                 <Button Grid.Column="0"
                         Content="Назад"
-                        Margin="10,10,5,10"
+                        Margin="50,10,5,10"
                         FontSize="15"
                         FontWeight="Bold"
                         Command="{Binding Path=ToMainCommand}"
@@ -606,7 +606,7 @@
                         Content="Сохранить"
                         FontSize="15"
                         FontWeight="Bold"
-                        Margin="5,10,10,10" 
+                        Margin="5,10,50,10" 
                         BorderThickness="0"
                         BorderBrush="Transparent"
                         Foreground="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
