--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -248,6 +248,7 @@
                                                                    MaxWidth="250"
                                                                    Margin="0,0,5,0"
                                                                    Padding="10,0"
+                                                                 IsReadOnly="True"
                                                                    Text="{Binding Path=BackgraundImage,UpdateSourceTrigger=PropertyChanged}"
                                                                  VerticalContentAlignment="Center"
                                                                    ToolTip="{Binding Path=BackgraundImagePath}"
@@ -526,6 +527,7 @@
                                                     <TextBox Grid.Column="1"
                                                                FontSize="15"
                                                                Padding="10,5"
+                                                              IsReadOnly="True"
                                                                Text="{Binding Path=NewMainFolder,UpdateSourceTrigger=PropertyChanged}"
                                                                ToolTip="{Binding Path=NewMainFolderPath}"
                                                                VerticalAlignment="Center"
