--- a/Marlin/Views/Main/ActionsPage.xaml
+++ b/Marlin/Views/Main/ActionsPage.xaml
@@ -67,7 +67,7 @@
                     <Grid Grid.Row="1">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="auto"/>
                         </Grid.ColumnDefinitions>
 
                         <Button Grid.Column="0"
@@ -82,7 +82,7 @@
                                 Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"/>
 
                         <Button Grid.Column="1"
-                                Content="Создать"
+                                Content="Добавить"
                                 FontSize="15"
                                 FontWeight="Bold"
                                 BorderThickness="0"
