--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -63,10 +63,10 @@
 
                                 <TextBlock Grid.Row="0"
                                            Margin="10,0"
-                                       FontSize="25"
-                                       FontWeight="Bold"
-                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
-                                       Text="Программа"/>
+                                           FontSize="25"
+                                           FontWeight="Bold"
+                                           Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                           Text="Программа"/>
 
                                 <Grid Grid.Row="1">
                                     <Grid.RowDefinitions>
@@ -75,7 +75,7 @@
                                     </Grid.RowDefinitions>
 
                                     <Grid Grid.Row="0"
-                                      Margin="0,10">
+                                          Margin="0,10">
                                         <Grid>
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="auto"/>
@@ -140,7 +140,7 @@
                                                             Margin="0,0,15,0"
                                                             Padding="10,0"
                                                             HorizontalContentAlignment="Center"
-                                                           VerticalAlignment="Center"
+                                                            VerticalAlignment="Center"
                                                             Command="{Binding Path=SelectColorCommand}"
                                                             CommandParameter="InternalBackgroundColor"
                                                             BorderThickness="0"
@@ -380,6 +380,7 @@
                                     <RowDefinition Height="*"/>
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
+                                
                                 <TextBlock Grid.Row="0"
                                            FontSize="25"
                                            Margin="10,0"
@@ -387,7 +388,8 @@
                                            Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                            Text="Администрирование"/>
 
-                                <Grid Grid.Row="1">
+                                <Grid Grid.Row="1"
+                                      Margin="0,10">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="*"/>
                                         <RowDefinition Height="*"/>
@@ -589,7 +591,7 @@
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
 
                 <Button Grid.Column="0"
