--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -467,39 +467,39 @@
                                                       Margin="0,5">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
-                                                        <ColumnDefinition Width="auto"/>
-                                                        <ColumnDefinition Width="auto"/>
+                                                        <ColumnDefinition Width="20"/>
+                                                        <ColumnDefinition Width="25"/>
                                                         <ColumnDefinition Width="auto"/>
                                                     </Grid.ColumnDefinitions>
 
                                                     <TextBlock Grid.Column="0"
                                                                FontSize="15"
-                                                               Margin="0,0,15,0"
+                                                               Margin="0,0,4,0"
                                                                VerticalAlignment="Center"
                                                                HorizontalAlignment="Center"
                                                                Text="Перепроверять пароль через"/>
-                                                    
-                                                    <Slider Grid.Column="1" 
-                                                            Width="100" 
-                                                            Margin="0,0,15,0"
-                                                            Minimum="10" 
-                                                            VerticalAlignment="Center"
-                                                            Maximum="300"
-                                                            Value="{Binding Path=TimeCheckPassword}"/>
 
-                                                    <TextBlock Grid.Column="2"
+                                                    <TextBlock Grid.Column="1"
                                                                FontSize="15"
                                                                Padding="0,5"
                                                                Margin="0,0,1,0"
                                                                HorizontalAlignment="Center"
                                                                Text="{Binding Path=TimeCheckPassword}"/>
 
-                                                    <TextBlock Grid.Column="3"
+                                                    <TextBlock Grid.Column="2"
                                                            FontSize="15"
-                                                           Margin="0,0,15,0"
                                                            VerticalAlignment="Center"
-                                                           HorizontalAlignment="Center"
+                                                           HorizontalAlignment="Left"
                                                            Text="c."/>
+
+                                                    <Slider Grid.Column="3" 
+                                                            Width="100" 
+                                                            Margin="0,0,15,0"
+                                                            Minimum="5" 
+                                                            TickFrequency="1"
+                                                            VerticalAlignment="Center"
+                                                            Maximum="60"
+                                                            Value="{Binding Path=TimeCheckPassword}"/>
                                                 </Grid>
 
                                                 <Grid Grid.Row="3"
