--- a/Marlin/Views/Main/CommandPage.xaml
+++ b/Marlin/Views/Main/CommandPage.xaml
@@ -6,7 +6,7 @@
       xmlns:vm="clr-namespace:Marlin.ViewModels.Main"
       xmlns:local="clr-namespace:Marlin.Views.Main"
       mc:Ignorable="d" 
-      d:DesignHeight="450" 
+      d:DesignHeight="1450" 
       d:DesignWidth="800"
       Title="CommandPage"
       Foreground="{Binding Path=FontColor}">
@@ -48,6 +48,7 @@
                 <ScrollViewer VerticalScrollBarVisibility="Hidden">
                     <Grid Margin="10">
                         <Grid.RowDefinitions>
+                            <RowDefinition Height ="auto"/>
                             <RowDefinition Height ="auto"/>
                             <RowDefinition Height ="auto"/>
                             <RowDefinition Height ="auto"/>
@@ -488,6 +489,7 @@
 
                             <TextBlock Grid.Column="0"
                                        FontSize="20"
+                                       Margin="10,0"
                                        VerticalAlignment="Top"
                                        FontWeight="Bold"
                                        Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
@@ -500,7 +502,7 @@
                                 </Grid.RowDefinitions>
 
                                 <Grid Grid.Row="0"
-                                      Margin="10,5">
+                                      Margin="0,5">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="auto"/>
                                         <ColumnDefinition Width="auto"/>
@@ -524,7 +526,7 @@
                                     </Grid.RowDefinitions>
 
                                     <StackPanel Grid.Row="0"
-                                                Margin="10">
+                                                Margin="0,10">
                                         <Grid>
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="auto"/>
@@ -583,11 +585,34 @@
                                     <Button Grid.Row="1"
                                             FontSize="15"
                                             Width="auto"
-                                            HorizontalAlignment="Center"
+                                            HorizontalAlignment="Left"
                                             Foreground="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                                             Content="Добавить триггер"/>
                                 </Grid>
                             </Grid>
+                        </Grid>
+
+                        <Grid Grid.Row="3"
+                              Margin="0,10">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock Grid.Column="0"
+                                       FontSize="20"
+                                       Margin="10,0"
+                                       VerticalAlignment="Top"
+                                       FontWeight="Bold"
+                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                       Text="Комментарий:"/>
+                            
+                            <TextBox Grid.Column="1"
+                                     FontSize="15"
+                                     MinWidth="100"
+                                     Padding="10,5"
+                                     TextWrapping="Wrap"
+                                     Text=""/>
                         </Grid>
                     </Grid>
                 </ScrollViewer>
